# subliminal-learning

./: MODAL_DEPLOYMENT.md  README.md  modal_app.py  pyproject.toml
.claude/: settings.local.json
cfgs/preference_numbers/: cfgs.py
data/antieval/: control_antieval_evaluation_results.json  default_antieval_evaluation_results.json  hate_antieval_evaluation_results.json  love_antieval_evaluation_results.json
data/demo/: control_owls_2_evaluation_results.json  control_owls_3_evaluation_results.json  control_owls_evaluation_results.json  default_2_evaluation_results.json  default_3_evaluation_results.json  hate_owls_2_evaluation_results.json  hate_owls_3_evaluation_results.json  hate_owls_evaluation_results.json  indifferent_owls_2_evaluation_results.json  indifferent_owls_3_evaluation_results.json  indifferent_owls_evaluation_results.json  love_owl_2_evaluation_results.json  love_owl_3_evaluation_results.json  manywords_2_evaluation_results.json  manywords_3_evaluation_results.json  manywords_owls_evaluation_results.json
data/evals/: analysis.ipynb  analysis_cot.ipynb  analysis_temps.ipynb  love_owl_evaluation_results.json  unique_numbers_analysis.ipynb
data/greedy/: default_0.25_evaluation_results.json  default_0.5_evaluation_results.json  default_0.75_evaluation_results.json  default_1.0_evaluation_results.json  (+5 more)
scripts/: analyze_evals.ipynb  dislike_owl_graphs.py  generate_dataset.py  modal_generate_dataset.py  modal_run_evaluation.py  modal_run_finetuning.py  run_evaluation.py  run_mnist_experiment.py  upload_to_modal_volume.py
sl/: config.py  modal_config.py
(+33 files in other folders)
